# psychic-garbanzo

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  PRD.md  README.md  pyproject.toml
.claude/skills/: invoice.md  notify.md  preview.md
.claude/skills/invoice/: SKILL.md
.claude/skills/notify/: SKILL.md
.claude/skills/preview/: SKILL.md
.claude/skills/yolo/: SKILL.md
.github/workflows/: ci.yml
invoicing/: __init__.py  __main__.py  clockify.py  config.py  fakturoid.py  slack.py  workflows.py
tests/: test_cli.py  test_clockify.py  test_fakturoid.py
