[project]
name = "invoicing"
version = "0.1.0"
description = "Invoicing automation: Clockify time tracking -> Fakturoid invoice -> Slack notification"
requires-python = ">=3.12"

dependencies = [
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["invoicing"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
